# hand_interaction

./: CMakeLists.txt  README  manifest.xml
data0906/: 0.csv  10.csv  20.csv  5.csv  ExtrinsicParameters.yml  ManhError.csv  huenoError.csv  out_camera_data.yml  tyamadaError.csv
launch/: finger_detector.launch  hand_detector.launch
launch/.svn/: all-wcprops  entries
launch/.svn/text-base/: finger_detector.launch.svn-base  hand_detector.launch.svn-base
libsvm-3.1/: validation.txt
src/: #detect_hands.cpp#  #training.cpp#  analyze_hands.cpp  calibration.cpp  capture.cpp  detect_hands_wskel.cpp  filelist.txt  filelist.txt~  pointing_area.cpp  predict.cpp  predict.cpp~  predict2.cpp  predict2.cpp~  resampling.cpp  saveHandCloud.cpp  saveHandCloud.cpp~  svm.cpp  svm.h  temp.cpp  temp.cpp~  test.cpp~  training.cpp  training.cpp~  yubisashi.cpp
src/.svn/: all-wcprops  entries
src/.svn/text-base/: analyze_hands.cpp.svn-base  detect_hands_wskel.cpp.svn-base
